# Learning-Bevy

./: .gitignore  Cargo.toml  Readme.md
.done/1 - bevy book/src/: main.rs
1 - bevy book/: Cargo.toml
2 - Jacques Bevy 0.10/: Cargo.toml
2 - Jacques Bevy 0.10/src/: enemy.rs  main.rs  player.rs
ended/: main - the bevy book.rs  the bevy book.rs
src/: enemy.rs  main.rs  player.rs
