[package]
name = "learnig-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# cargo run --features bevy/dynamic_linking
# changed to 0.13, instead of 0.10
bevy = "0.13"
rand = "0.8.5"
